# esphome-xiaomi_bslamp2

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yeelight_bs2.h.swp  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.md  Makefile  README.chinese.md  README.md  __init__.py  color_instant_handler.h  color_night_light.h  color_off.h  color_rgb_light.h  color_transition_handler.h  color_translator.h  color_white_light.h  common.h  example-device.yaml  example.yaml  front_panel_hal.h  library.json  light.h  light.py  light_hal.h  light_output.h  light_state.h  night_light.h  pyproject.toml  rgb_light.h  rgb_light.h-old  s  white_light.h  yeelight_bs2.h  yeelight_bs2.yaml  yeelight_bs2_hub.h  yeelight_bs2_light_output.h
.github/: FUNDING.yml
binary_sensor/: __init__.py  binary_sensor.h  button.h  touch_binary_sensor.h
doc/: ESP32 pinout.xcf  FLASHING.md  PulseView setup for RGB tests.pvs  RGB_mapping.py  Reboot crashes on ESPHome.txt  Trace bottom right.xcf  Trace front panel connector.xcf  Trace top right.xcf  Yeelight GPIO measurements.xlsx  configuration.md  example-full.yaml  example.yaml  flashing.md  hardware.md  installation.md  known_issues.md  release_plan.md  sponsoring.md  technical_details.md  test_plan.md  testplan.md  upgrading_to_2021.10.0.md  why_custom_firmware.md
doc.chinese/: flashing.md  installation.md  release_plan.md
doc_chinese/: configuration.md  technical_details.md  why_custom_firmware.md
light/: __init__.py  automation.h  color_instant_handler.h  color_night_light.h  color_off.h  color_rgb_light.h  color_transition_handler.h  common.h  (+7 more)
(+83 files in other folders)
