[project]
name = "xiaomi_bslamp2"
version = "0.0.0-dev"
description = "ESPHome integration for the Xiaomi Mijia Bedside Lamp v2."
requires-python = "==3.12.*"
dependencies = ["ruff"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "TID", # flake8-tidy-imports
]
ignore = [
    "SIM102", # Sometimes nested if statement serve readability
    "I001", # Current problem in pre-commit (--fix changes nothing, pre-commit reports issue)
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

